objects/Sob1__c.object
<CustomObject>
    <fields>
        <fullName>SF1__c</fullName>
        <label>SF1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF2__c</fullName>
        <label>SF2</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SF3__c</fullName>
        <label>SF3</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Sob1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>SF1__c</columns>
        <columns>SF2__c</columns>
        <columns>SF3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sob1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sob1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>